# any-parser

./: .gitignore  .pre-commit-config.yaml  README.md  any_parser_base.sh  extract_parse.sh  main.py  open_parser.sh  open_parser_base.sh  parse.sh  pyproject.toml  run_tests.sh
.github/: CODEOWNERS  pull_request_template.md
any_parser/: __init__.py  any_parser.py  any_parser_rt.py  async_parser.py  base.py  base_parser.py  batch_parser.py  constants.py  postprocessors.py  sync_parser.py  terminal_ui.py  utils.py
demo/: demo.ipynb  pdf_to_html_to_excel.ipynb
examples/: async_advanced_full_context.ipynb  async_example.ipynb  async_extract_key_value_img.ipynb  async_extract_key_value_pdf.ipynb  async_extract_pii.ipynb  async_extract_resume_key_value.ipynb  async_extract_tables.ipynb  async_image_to_json.ipynb  async_image_to_key_value.ipynb  async_parse_pdf.ipynb  async_parse_pdf2.ipynb  async_parse_pro_pdf.ipynb  async_parse_with_layout.ipynb  async_parse_with_ocr.ipynb  async_pdf_to_json.ipynb  async_pdf_to_key_value.ipynb  async_pdf_to_markdown.ipynb  docx_to_markdown.ipynb  extract_key_value_img.ipynb  extract_key_value_pdf.ipynb  extract_key_values_from_cbc_reports_in_different_layout.ipynb  extract_pii.ipynb  extract_resume_key_value.ipynb  extract_table_from_image_to_markdown.ipynb  extract_tables.ipynb  extract_tables_from_pdf.ipynb  html_2_xlsx.ipynb  image_to_key_value.ipynb  image_to_markdown.ipynb  parse_batch_api.ipynb  parse_batch_fetch.ipynb  parse_batch_fetch.py  parse_batch_upload.ipynb  parse_batch_upload.py  parse_docx.ipynb  parse_img.ipynb  (+22 more)
(+27 files in other folders)
