[tool.poetry]
name = "any-parser"
version = "0.0.18"
description = "Parser for all."
authors = ["CambioML <wanwanaiai45@gmail.com>"]
maintainers = ["Rachel Hu <goldpiggy@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.25.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
Levenshtein = [
    { version = "0.25.1", python = "<3.9" },
    { version = "0.26.0", python = ">=3.9" }
]
black = "^24.8.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
